nvim config yet again (but it's with a duck). Also undotree

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,7 @@ set -g mouse on
 unbind C-b
 set-option -g prefix C-Space
 bind C-a send-prefix
+set -g status-style 'bg=#1a1b26 fg=#3d69a1'
 
 bind h select-pane -L
 bind j select-pane -D 
