xmonad refactor of nvim plugins I think

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
+set -g status-style 'bg=#1a1b26 fg=#3d69a1'
+set -g status-right "%H:%M"
+
 unbind C-b
 set-option -g prefix C-Space
 bind C-a send-prefix
-set -g status-style 'bg=#1a1b26 fg=#3d69a1'
-
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
