--- a/starship.toml
+++ b/starship.toml
@@ -4,24 +4,15 @@
 # Inserts a blank line between shell prompts
 add_newline = false
 
+format = "$directory$character"
+
 [line_break]
 disabled = true
 
 # Replace the '❯' symbol in the prompt with '➜'
 [character] # The name of the module we are configuring is 'character'
 success_symbol = '[❯](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
-#failure_symbol = '[❯](bold red)'
+error_symbol = '[❯](bold red)'
 
-[git_status]
-disabled = true
-
-[git_branch]
-disabled = true
-
-[rust]
-disabled = true
-
-# Disable the package module, hiding it from the prompt completely
 [package]
 disabled = true
-
