--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
+set-option status-left-length 20
 set -g mouse on
 
 set -g status-style 'bg=#1a1b26 fg=#3d69a1'
